2002-10-11  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/ctype: Qualify wint_t with __CSTD
	when in global namespace.
	* include/wctype:Likewise.
	* include/stdio.h: Qualify wint_t and size_t with __CSTD
	when in global namespace.
	* include/stdlib.h: Qualify size_t with __CSTD
	when in global namespace.
	* include/string.h: Likewise.
	* include/time.h: Likewise.
	* include/sys/types.h: Inject time_t into global namespace.

2002-10-04  Danny Smith  <dannysmith@users.sourceforge.net>

	Merge from mingw mainline.

	2002-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cytpe.h (_imp____mbcur_max): Add missing ';'.
	(_imp____mbcur_max_dll): Likewise.

	2002-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/fcntl.h (_fmode): Remove declarations and
	compatibility defines.
	(_setmode, setmode): Remove prototypes.
	* include/stdlib (_fmode): Add declarations and
	compatibility defines.  Change type to int.
	* include/io.h (_setmode, setmode): Add prototypes.
	* samples/fmode/all.c: Adjust includes.
	* samples/fmode/test.c: Likewise.
	* crt1.c (_CRT_fmode): Declare as int.
	* CRTfmode.c (_CRT_fmode): Likewise.

	* include/stdlib: Remove comment about MB_CUR_MAX.

        2002-10-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/stdlib.h (_imp____mbcur_max): Add missing ';'.
	(_imp____mbcur_max_dll): Likewise.

2002-10-03  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/math.h (__signbit); Remove errant '__' added in last
	patch.
 	* include/wctype.h: Add missing space before __wc, throughout.
	(is_wctype): Move into non-ANSI space.

2002-10-02  Danny Smith  <dannysmith@users.sourceforge.net>

	* include/cytpe.h: Prefix identifiers used as args of inlines
	with '__', throughout.
	* include/inttypes.h: Likewise.
	* include/math.h: Likewise.
	* include/stdio.h: Likewise.
	* include/stdlib.h: Likewise.
	* include/wchar.h: Likewise.
	* include/wctype.h: Likewise.
